submit button not working now

--- a/mvcpractice1/Views/Home/Summary.cshtml
+++ b/mvcpractice1/Views/Home/Summary.cshtml
@@ -1,7 +1,7 @@
 ﻿@model mvcpractice1.Models.NewUser
 
 @{
-    ViewBag.Title = "Summary";
+    ViewBag.Title = "SummaryPage";
 }
 
 <h2>Summary</h2>
